# NonogramSolver

./: CMakeLists.txt
Debug/: CMakeLists.txt
Debug/source/: main.cpp
Engine/: CMakeLists.txt
Engine/include/: Board.h
Engine/include/NonogramEngine/: Board.h  BoardSolver.h
Engine/include/NonogramEngine/IO/: NNParser.h
Engine/include/NonogramEngine/Utils/: rawalloc.h  rawalloc.natvis
Engine/source/: Board.cpp  BoardSolver.cpp
Engine/source/IO/: NNParser.cpp
