# NonogramSolver/Engine

set(TARGET_NAME Engine)

set(HEADER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)

set(ENGINE_DIR ${HEADER_DIR} PARENT_SCOPE)

file(GLOB_RECURSE HEADER_FILES ${HEADER_DIR}/*.h)
file(GLOB_RECURSE SOURCE_FILES ${SOURCE_DIR}/*.cpp)

set(TARGET_FILES ${HEADER_FILES} ${SOURCE_FILES})
message(${TARGET_FILES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${TARGET_FILES})

add_library(${TARGET_NAME} STATIC)
target_sources(${TARGET_NAME} PRIVATE ${TARGET_FILES})
target_include_directories(${TARGET_NAME} PRIVATE ${HEADER_DIR})
